@@ -22,6 +22,7 @@ BUG FIXES:
 +Fix unwanted/invalid completion issue in HTML autocompletion for open brackets
 on lines with tabs in them.
 +Fix PyDeadObject that could occur during reload file request.
++Fix crash that could occur during formatting of log messages.
 
 #-----------------------------------------------------------------------------#
 
